files needed for jpackage bundle testing on VMs